fix weird svg filter on firefox

--- a/scss/form.scss
+++ b/scss/form.scss
@@ -46,6 +46,7 @@
   padding: 1rem;
   width: 100%;
   border-color: $color-border;
+  background-color: white;
 
   &:hover {
     background-color: $color-text;
