--- a/scss/grid.scss
+++ b/scss/grid.scss
@@ -7,7 +7,7 @@ body {
 }
 
 .wrapper {
-  max-width: 32rem;
+  max-width: 24rem;
 }
 
 .header,
